crates/biome_yaml_formatter/tests/specs/prettier/yaml/prettier-ignore/document.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/prettier-ignore/document.yml
---

# Input

```yml
# prettier-ignore
---
aaaaa:
           bbbbb
...
aaaaa:
           bbbbb

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
document.yml:5:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token.
  
    3 │ aaaaa:
    4 │            bbbbb
  > 5 │ ...aaaaa:
      │    ^^^^^^
  > 6 │            bbbbb
  > 7 │ 
      │ 
  

```
